srcs/ftps-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
spec:
  type: NodePort
  selector:
    app: ftps
  ports:
  - name: ftps
    port: 21
    targetPort: 21
    nodePort: 21
  - name: ftps-data
    port: 21000
    targetPort: 21000
    nodePort: 21000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps-image
        imagePullPolicy: Never
        securityContext:
          privileged: true
