srcs/grafana-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port:	3000
      nodePort: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana-image
        imagePullPolicy: Never
        securityContext:
          privileged: true
        command: [ "/bin/sh", "-c" ]
        args: [ "/usr/bin/supervisord -n -c /etc/supervisor/conf.d/supervisord.conf" ]
