srcs/nginx-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: ssh
      port: 22
      nodePort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx-image
        imagePullPolicy: Never
        command: [ "/bin/sh", "-c" ]
        args: [ "/etc/init.d/sshd start; nginx -g 'daemon off;'" ]
        securityContext:
          privileged: true
