srcs/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress-image
        imagePullPolicy: Never
        command: [ "/bin/sh", "-c" ]
        args: [ "httpd -DFOREGROUND" ]
        ports:
        - name: wordpress
          containerPort: 80
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: "/var/www/html"
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
